# storix_project

./: AGENTS.md  README.md  pyproject.toml
.claude/skills/storix-clean-safety/: SKILL.md
.claude/skills/storix-cli-tui-delivery/: SKILL.md
.claude/skills/storix-mvp-guardrails/: SKILL.md
.claude/skills/storix-test-patterns/: SKILL.md
.omc/: project-memory.json
.omc/sessions/: 385a8ad9-2270-4503-b023-01b6bf621389.json  7c75fdc8-922d-4af1-a6f2-af8ca45e07eb.json
.omc/state/: idle-notif-cooldown.json
dev/: storix_prd.md  storix_tdd.md
docs/: install.md
storix/: __init__.py  cli.py  constants.py  main.py
storix/cleaners/: __init__.py  android_cleaner.py  base.py  flutter_cleaner.py  node_cleaner.py  project_cleaner.py  vscode_cleaner.py  xcode_cleaner.py
storix/models/: __init__.py  candidate.py  clean_result.py  enums.py  report.py  summary.py
storix/presenters/: __init__.py  console_presenter.py  json_presenter.py  markdown_presenter.py  tui_adapter.py
storix/rules/: __init__.py  targets.yaml
storix/scanners/: __init__.py  android_scanner.py  disk_scanner.py  flutter_scanner.py  general_scanner.py  node_scanner.py  project_scanner.py  python_scanner.py  vscode_scanner.py  xcode_scanner.py
storix/services/: __init__.py  clean_service.py  doctor_service.py  project_service.py  report_service.py  scan_service.py
storix/tui/: __init__.py  app.py  storix.tcss
storix/tui/screens/: main_screen.py  (+2 more)
storix/utils/: __init__.py  confirm.py  fs.py  guard.py  logger.py  shell.py  size.py
tests/: test_clean_service.py  test_doctor_service.py  test_guard.py  test_main_entrypoint.py  test_project_scanner.py  test_scan_service.py  test_tui_state.py
(+13 files in other folders)
