[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storix-cli"
version = "0.1.0"
description = "macOS local storage analyzer and cleaner for developers"
readme = "README.md"
authors = [
    { name = "Minchan Park" },
]

requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["macos", "storage", "cleanup", "developer-tools", "cli", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "textual>=0.61.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
storix = "storix.cli:app"

[project.urls]
Homepage = "https://github.com/minchanpark/storix_project"
Repository = "https://github.com/minchanpark/storix_project"
Issues = "https://github.com/minchanpark/storix_project/issues"

[tool.hatch.build.targets.wheel]
packages = ["storix"]

[tool.hatch.build.targets.wheel.force-include]
"storix/tui/storix.tcss" = "storix/tui/storix.tcss"
"storix/rules/targets.yaml" = "storix/rules/targets.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
